# dude-wheres-my-car

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  server.py
.github/workflows/: ci.yml  rag_eval.yml
data/: approved_reservations.txt  parking.db
data/dynamic/: seed_spaces.sql
data/static/: booking_process.md  general_info.md  location.md
evaluation/: load_test.py  rag_eval.py  rag_golden_dataset.jsonl
presentation/: architecture.pptx  slides.pptx  ~$architecture.pptx
scripts/: init.py  test_rag.py
src/: config.py
src/agents/: approval_request.py  chatbot.py  hitl.py  reservation.py
src/db/: file_writer.py
src/graph/: edges.py  nodes.py  post_approval_node.py  workflow.py
src/mcp/: client.py  server.py
src/mcp_server/: client.py  server.py
src/memory/: state.py
src/notifications/: auth.py  base.py  pending.py
src/rag/: guardrails.py  indexer.py  pipeline.py  query_engine.py  retriever.py
tests/: confest.py  test_indexer.py  test_retriever.py
tests/agents/: test_chatbot.py  test_hitl.py  test_reservation.py
tests/mcp/: test_mcp_client.py  test_mcp_server.py
tests/orchestration/: test_edges.py  test_router.py  test_workflow.py
tests/rag/: test_indexer.py  test_query_engine.py
