[project]
name = "dude-wheres-my-car"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "chromadb>=1.5.8",
    "huggingface-hub[inference]==0.23.5",
    "langchain>=1.2.17",
    "llama-index>=0.14.21",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-anthropic>=0.11.3",
    "llama-index-vector-stores-chroma>=0.5.5",
    "numpy>=2.4.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]


[tool.pytest.ini_options]
pythonpath = ["."]
